# yt_transcriber

./: .gitignore
back/: README.md  app.py  notes.md  requirements.txt  setup.cfg
back/scripts/: create_admin.txt
back/src/yt_transcriber/: __init__.py  app.py  config.py  models.py  utils.py
back/src/yt_transcriber/routers/: __init__.py  youtube_api_keys.py  youtube_video_manifests.py
back/tests/: conftest.py  example_manifest.json  test_modules.py
back/tests/models/: test_youtube_api_keys.py
front/: README.md
